<resources>
    <string name="app_name">Cian</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">Buy</string>
    <string name="rent">Rent</string>
    <string name="place_an_ad">Place an ad</string>
    <string name="saved">Saved</string>
    <string name="messages">Messages</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="joke1">I was digging in our garden when I found a chest full of gold coins. I was about to run straight home to tell my wife about it, but then I remembered why I was digging in our garden.</string>
    <string name="joke2">My grandfather says I\'m too reliant on technology. I called him a hypocrite and unplugged his life support.</string>
    <string name="add_photo">Add photo</string>
    <string name="choose_housing_type">Choose housing type</string>
    <string name="select_the_number_of_rooms">Select the number of rooms</string>
    <string name="short_description">Short description</string>
    <string name="full_description">Full description</string>
    <string name="add">add</string>
    <string name="choose_type_ad">Choose type ad</string>
    <string name="price">Price</string>
    <string name="check_fields">Please fill in all fields</string>
    <string name="type_ad">Type ad</string>
    <string name="housing_type">housing type</string>
    <string name="the_number_of_rooms">the number of rooms</string>
    <string name="main">Main</string>
    <string name="my_account">My account</string>
    <string name="login_dialog_title">To place an ad you need to log in to your account</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="my_posts">My posts</string>
    <string name="images_count">%d/%d</string>
    <string name="close_button">Close button</string>
    <string name="new_ad_title">New Ad</string>
    <string name="edit_ad_title">Edit Ad</string>
    <string name="edit">Edit</string>
    <string name="add_address">Add address</string>
    <string name="map_default">Enter the address on the map</string>
    <string-array name="type_of_housing">
        <item>House</item>
        <item>Apartment</item>
        <item>Room</item>
    </string-array>
    <string-array name="number_of_room">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>5+</item>
    </string-array>
    <string-array name="type_ad">
        <item>Rental</item>
        <item>Sale</item>
    </string-array>
</resources>
