<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".screens.detail.PostDetailFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFF"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/post_detail_short_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/short_description" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/post_detail_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#FFF"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/post_detail_price_input"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/post_detail_price_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/post_detail_full_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/full_description" />

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/progress_bar" />

    </FrameLayout>

</ScrollView>