<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".screens.detail.AdDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/post_detail_view_pager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ad_detail_short_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:background="#FFF"
            android:padding="8dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/ad_detail_guideline_end"
            app:layout_constraintStart_toStartOf="@id/ad_detail_guideline_start"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/short_description" />


        <TextView
            android:id="@+id/ad_detail_price_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FFF"
            android:padding="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/ad_detail_full_description_text"
            app:layout_constraintEnd_toEndOf="@id/ad_detail_guideline_end"
            app:layout_constraintStart_toStartOf="@id/ad_detail_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/ad_detail_short_description_text"
            tools:text="2 000 000" />

        <TextView
            android:id="@+id/ad_detail_full_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#FFF"
            android:padding="8dp"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toEndOf="@id/ad_detail_guideline_end"
            app:layout_constraintStart_toStartOf="@id/ad_detail_guideline_start"
            app:layout_constraintTop_toBottomOf="@id/ad_detail_price_text"
            tools:text="@string/full_description" />

        <TextView
            android:id="@+id/ad_detail_address_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/ad_detail_full_description_text"
            app:layout_constraintEnd_toEndOf="@id/ad_detail_guideline_end"
            app:layout_constraintStart_toStartOf="@id/ad_detail_guideline_start"
            app:layout_constraintBottom_toTopOf="@id/ad_detail_map"
            android:textColor="@color/colorText"
            android:text="@string/map_default" />

        <fragment
            android:id="@+id/ad_detail_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/ad_detail_address_text"
            app:layout_constraintEnd_toEndOf="@id/ad_detail_guideline_end"
            app:layout_constraintStart_toStartOf="@id/ad_detail_guideline_start"
            android:layout_height="180dp"
            map:liteMode="true" />

        <include layout="@layout/progress_bar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ad_detail_guideline_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/ad_detail_guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>